--- a/index.html
+++ b/index.html
@@ -23,25 +23,15 @@
   </section>
 
   <h2 class="header-color">Blog Posts</h2>
-  <section>
-    <h4></h4>
-    <article class="border-color">Filler text</article>
-    <h4></h4>
-    <article class="border-color">Filler text</article>
-    <h4></h4>
-    <article class="border-color">Filler text</article>
-    <h4></h4>
-    <article class="border-color">Filler text</article>
-    <h4></h4>
-    <article class="border-color">Filler text</article>
-    <h4></h4>
-    <article class="border-color">Filler text</article>
+  <section id="blogPlace">
+    
+    
 
   </section>
 
   <footer>You can reach me at: tngamerboy@gmail.com, https://github.com/Adobe-Android, https://www.linkedin.com/in/david-brown-811bab99/
   </footer>
-
+<script src="main.js"></script>
 </body>
 
 </html>
