fixed my links in the footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
   </section>
 
-  <footer>You can reach me at: tngamerboy@gmail.com, https://github.com/Adobe-Android, https://www.linkedin.com/in/david-brown-811bab99/
+  <footer>You can reach me at: <a href="tngamerboy@gmail.com">My Email</a>, <a href="https://github.com/Adobe-Android">My GitHub</a>, <a href="https://www.linkedin.com/in/david-brown-811bab99/">My LinkedIn</a>
+  
   </footer>
 <script src="main.js"></script>
 </body>
